--- a/client/package.json
+++ b/client/package.json
@@ -34,5 +34,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "https://rocket-list.herokuapp.com:5000"
+  "proxy": "http://localhost:5000"
 }
