--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "author": "Dmitrii <golubev.rocket@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
