--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "npm run server --prefix server",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "npm run heroku-postbuild --prefix server && install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "concurrently \"npm run heroku-postbuild --prefix server\" \"install --prefix client && npm run build --prefix client\""
   },
   "dependencies": {
     "concurrently": "^4.1.0"
