--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "client-install": "npm run --prefix client",
-    "start": "NPM_CONFIG_PRODUCTION=false npm run start --prefix server",
+    "start": "npm run start --prefix server",
     "server": "npm run server --prefix server",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
