--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
   "author": "Dmitrii <golubev.rocket@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client-install": "npm run --prefix client",
-    "start": "npm run start --prefix server",
-    "server": "npm run server --prefix server",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "config": "^3.0.1",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.4.19",
     "concurrently": "^4.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
