--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0-2",
     "@fortawesome/react-fontawesome": "^0.1.4-1",
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.5",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
