--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "config": "^3.0.1",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
-    "concurrently": "^4.1.0"
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
